--- a/ansible/p1_pf_playbook.yml
+++ b/ansible/p1_pf_playbook.yml
@@ -80,13 +80,6 @@
                   list }}"
     when: (env_created_date) <= (current_date)
 
-# Ping Federate Block
-#need to also look at deployment to see if PF deployed
-  - include: ./PF/PRE/pf_admin_sso.yml
-    when: >
-      "PING_FEDERATE" in bom_values and
-      (env_created_date) <= (current_date)
-
 # CIAM Block
   - include: ./P1/CIAM/risk_policy_set.yml
     when: >
@@ -142,8 +135,49 @@
       (env_created_date) <= (current_date)
 
 # Ping Federate Block
-#need to also look at deployment to see if PF deployed
-  - include: ./PF/PRE/pf_admin_sso.yml
+
+  - include: ./PF/POST/pf_external_idp.yml
     when: >
+      '"PING_FEDERATE" in bom_values' and
+      (env_created_date) <= (current_date)
+
+  - include: ./PF/POST/pingid_sspr.yml
+    when: >
+      "PING_ID" in bom_values and
       "PING_FEDERATE" in bom_values and
       (env_created_date) <= (current_date)
+
+  - include: ./PF/POST/pf_gw_create.yml
+    when: >
+      '"PING_FEDERATE" in bom_values' and
+      (env_created_date) <= (current_date)
+
+  - include: ./PF/POST/mfa_auth_policy.yml
+    when: >
+      "PING_ID" in bom_values and
+      "PING_FEDERATE" in bom_values and
+      (env_created_date) <= (current_date)
+
+  - include: ./PF/POST/pf_p1_auth.yml
+    when: >
+      "PING_ID" in bom_values and
+      "PING_FEDERATE" in bom_values and
+      (env_created_date) <= (current_date)
+
+  - include: ./PF/POST/sample_app_create.yml
+    when: >
+      "PING_ID" in bom_values and
+      "PING_FEDERATE" in bom_values and
+      (env_created_date) <= (current_date)
+
+  - include: ./PF/POST/pf_risk_adapter.yml
+    when: >
+      "PING_ONE_RISK" in bom_values and
+      "PING_FEDERATE" in bom_values and
+      (env_created_date) <= (current_date)
+
+  - include: ./PF/POST/pf_radius.yml
+    when: >
+       "PING_ID" in bom_values and
+       '"PING_FEDERATE" in bom_values' and
+       (env_created_date) <= (current_date)
